feat: Add deployment commands (clean, set-target, activate, restart, deploy)
- CleanCommand: Cleans TwinCAT solution build artifacts
- SetTargetCommand: Sets AMS Net ID for deployment target
- ActivateCommand: Activates TwinCAT config on target PLC
- RestartCommand: Restarts TwinCAT runtime on target
- DeployCommand: Full deployment workflow (build + boot + activate + restart)

Updated MCP server with corresponding tools:
- twincat_clean, twincat_set_target, twincat_activate
- twincat_restart, twincat_deploy

Fixed System.CommandLine option binding bug where CreateOption()
was called multiple times creating different instances.

--- a/TcAutomation/TcAutomation.csproj
+++ b/TcAutomation/TcAutomation.csproj
@@ -97,6 +97,11 @@
     <Compile Include="Core\VisualStudioInstance.cs" />
     <Compile Include="Commands\BuildCommand.cs" />
     <Compile Include="Commands\InfoCommand.cs" />
+    <Compile Include="Commands\CleanCommand.cs" />
+    <Compile Include="Commands\SetTargetCommand.cs" />
+    <Compile Include="Commands\ActivateCommand.cs" />
+    <Compile Include="Commands\RestartCommand.cs" />
+    <Compile Include="Commands\DeployCommand.cs" />
     <Compile Include="Models\BuildResult.cs" />
     <Compile Include="Models\ProjectInfo.cs" />
   </ItemGroup>
