Phase 4: Add ADS communication and task management tools
New commands:
- get-state: Get TwinCAT runtime state via ADS (no VS required)
- read-var: Read PLC variable by symbol path via ADS
- write-var: Write value to PLC variable via ADS
- list-tasks: List all real-time tasks in a project
- configure-task: Enable/disable tasks, set autostart
- configure-rt: Configure CPU cores and load limit

Added Beckhoff.TwinCAT.Ads v6.1.203 NuGet package for direct PLC communication.
ADS commands connect directly to the PLC without opening Visual Studio.

Total tools now: 17

--- a/TcAutomation/TcAutomation.csproj
+++ b/TcAutomation/TcAutomation.csproj
@@ -87,6 +87,9 @@
     <PackageReference Include="System.CommandLine">
       <Version>2.0.0-beta4.22272.1</Version>
     </PackageReference>
+    <PackageReference Include="Beckhoff.TwinCAT.Ads">
+      <Version>6.1.203</Version>
+    </PackageReference>
   </ItemGroup>
   
   <ItemGroup>
@@ -106,6 +109,12 @@
     <Compile Include="Commands\SetBootProjectCommand.cs" />
     <Compile Include="Commands\DisableIoCommand.cs" />
     <Compile Include="Commands\SetVariantCommand.cs" />
+    <Compile Include="Commands\GetStateCommand.cs" />
+    <Compile Include="Commands\ReadVariableCommand.cs" />
+    <Compile Include="Commands\WriteVariableCommand.cs" />
+    <Compile Include="Commands\ListTasksCommand.cs" />
+    <Compile Include="Commands\ConfigureTaskCommand.cs" />
+    <Compile Include="Commands\ConfigureRtCommand.cs" />
     <Compile Include="Models\BuildResult.cs" />
     <Compile Include="Models\ProjectInfo.cs" />
   </ItemGroup>
