Prepare for public release
- Add banner image and polished README
- Add set-state command for Run/Config/Stop control
- Fix disable-io message clarity
- Add LICENSE (MIT)
- Remove PLAN.md and PROGRESS.md from repo (gitignored)
- Update MCP tool count to 18 tools total

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ tests/TestTwinCATProject/
 
 # npm (for MCP Inspector)
 node_modules/
+
+# Development notes (not for public repo)
+PLAN.md
+PROGRESS.md
