feat: add CheckAllObjects and StaticAnalysis tools
- Added twincat_check_all_objects tool: checks all PLC objects including unused ones
  - Catches compile errors in unreferenced function blocks
  - Uses ITcPlcIECProject2.CheckAllObjects() (requires TwinCAT 3.1 Build 4018+)

- Added twincat_static_analysis tool: runs static code analysis
  - Checks naming conventions, coding rules, etc.
  - Uses ITcPlcIECProject3.RunStaticAnalysis() (requires TwinCAT 3.1 Build 4024+)
  - Requires TE1200 license for full functionality
  - Supports checkAll parameter to include unused objects

Both tools are read-only (no modifications to project files)

--- a/TcAutomation/TcAutomation.csproj
+++ b/TcAutomation/TcAutomation.csproj
@@ -116,6 +116,8 @@
     <Compile Include="Commands\ListTasksCommand.cs" />
     <Compile Include="Commands\ConfigureTaskCommand.cs" />
     <Compile Include="Commands\ConfigureRtCommand.cs" />
+    <Compile Include="Commands\CheckAllObjectsCommand.cs" />
+    <Compile Include="Commands\StaticAnalysisCommand.cs" />
     <Compile Include="Models\BuildResult.cs" />
     <Compile Include="Models\ProjectInfo.cs" />
   </ItemGroup>
