--- a/TcAutomation/TcAutomation.csproj
+++ b/TcAutomation/TcAutomation.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Commands\ConfigureRtCommand.cs" />
     <Compile Include="Commands\CheckAllObjectsCommand.cs" />
     <Compile Include="Commands\StaticAnalysisCommand.cs" />
+    <Compile Include="Commands\GetErrorListCommand.cs" />
     <Compile Include="Models\BuildResult.cs" />
     <Compile Include="Models\ProjectInfo.cs" />
   </ItemGroup>
