Add twincat_run_tcunit tool for TcUnit test execution
- Add RunTcUnitCommand.cs with full TcUnit workflow:
  - Build solution, configure tasks, set boot project
  - Optionally disable I/O for hardware-less testing
  - Activate, restart, and poll for test results
  - Parse TcUnit output markers from VS Error List
  - Progress logging via stderr

- Add run-tcunit CLI command with options:
  - --solution, --amsnetid, --task, --plc
  - --timeout, --disable-io, --skip-build

- Add MCP tool twincat_run_tcunit with streaming progress

- Safety: Remote PLC targets require armed mode (local is fine)

- Add execution timing to all tool outputs ( Execution time: X.Xs)

- Add format_duration() and add_timing_to_output() helpers

--- a/TcAutomation/TcAutomation.csproj
+++ b/TcAutomation/TcAutomation.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Commands\CheckAllObjectsCommand.cs" />
     <Compile Include="Commands\StaticAnalysisCommand.cs" />
     <Compile Include="Commands\GetErrorListCommand.cs" />
+    <Compile Include="Commands\RunTcUnitCommand.cs" />
     <Compile Include="Models\BuildResult.cs" />
     <Compile Include="Models\ProjectInfo.cs" />
   </ItemGroup>
